2025-04-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-dump-connection-properties): Adapt comment.

	* tramp-compat.el (tramp-warning): Declare and use it.

	* tramp-message.el (tramp-warning): Declare `indent'.

2025-04-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-use-file-attributes): Fix docstring.
	(tramp-handle-file-readable-p, tramp-handle-file-writable-p):
	Force `file-attributes' check.  Use `file-truename' for symbolic links.
	(tramp-check-cached-permissions): New optional argument FORCE.
	Fix symlink check.  Check also for sticky bit.  (Bug#77402)

	* tramp-adb.el (tramp-adb-handle-file-executable-p): Check also
	for sticky bit.
	(tramp-adb-handle-file-readable-p): Simplify.

	* tramp-gvfs.el (tramp-gvfs-handle-file-executable-p): Check also
	for sticky bit.  Force `file-attributes' check.

	* tramp-sh.el (tramp-sh-handle-file-executable-p): Check also for
	sticky bit.
	(tramp-sh-handle-file-readable-p)
	(tramp-sh-handle-file-writable-p): Simplify.

	* tramp-sudoedit.el (tramp-sudoedit-handle-file-executable-p):
	Check also for sticky bit.
	(tramp-sudoedit-handle-file-readable-p)
	(tramp-sudoedit-handle-file-writable-p): Simplify.

2025-03-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-exists-p)
	(tramp-handle-file-directory-p): Protect against cyclic symlinks.
	(tramp-skeleton-file-truename): Remove possible trailing slash.

	* tramp-sh.el (tramp-sh-handle-file-ownership-preserved-p):
	Add FIXME.

2025-03-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-process-file): Raise a warning if
	STDERR is not implemented.
	(tramp-handle-shell-command):
	Respect `async-shell-command-display-buffer'.

	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file): Handle symlinks.

	* tramp-sshfs.el (tramp-sshfs-handle-process-file): STDERR is not
	implemented.

2025-03-18  Stefan Kangas  <stefankangas@gmail.com>
