@@ -1,3 +1,13 @@
+2025-04-04  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-readlink-file-truename): New defconst.
+	(tramp-bundle-read-file-names): Use new %m and %q format specifiers.
+	(tramp-sh-handle-file-truename): Use `tramp-readlink-file-truename'.
+	(tramp-bundle-read-file-names, tramp-get-remote-readlink): Simplify.
+	(tramp-expand-script): Add format specifiers %m and %q for test
+	commands. Addapt readlink call.
+	Reported by Stacey Marshall <stacey.marshall@gmail.com>.
+
 2025-04-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-cache.el (tramp-dump-connection-properties): Adapt comment.
